# TgMusicBot

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
